--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	       <head><title>Class on GIT</title></head>
-	              <body>
+	       <body bgcolor="pink">
 			                   <h1> This is a Webpage App -  version1 </h1>
 
 </html>
